@@ -23,7 +23,10 @@ Version 6.0.1 - In development
       provided PointIndexTree to the size of the membership vector.
     - Fixed a race condition when moving points in point data grids for ABI=6+
       due to non-const access of AttributeArrays resulting in a copy-on-write.
-    - Fix bug with MeshToVoxel consuming infinite memory when giving NaNs.
+    - Fixed a bug that caused the mesh to volume converter to consume
+      infinite memory when given NaNs.
+    - Fixed a rotation order bug in tools::local_util::decompose()
+      that caused it to fail to decompose some matrices.
 
     Houdini:
     - The Points Convert SOP now reports NaN Positions as warnings when
